--- a/style.css
+++ b/style.css
@@ -28,22 +28,18 @@ body{
     color: white;
     font-family: monospace;
     text-align: center;
+    background-color: rgba(0, 0, 0, 0.653);
+    border-radius: 10px;
+    padding: 20px;
 }
 
 .planet-title{
     font-size: 50px;
-    background-color: rgba(0, 0, 0, 0.793);
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
     transition: all .25s;
 }
 
 .planet-info{
     font-size: 20px;
-    background-color: rgba(0, 0, 0, 0.793);
-    padding: 10px;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
     transition: all .25s;
 }
 
