--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body{
     background-color: rgba(0, 0, 0, 0.653);
     border-radius: 10px;
     padding: 20px;
+    box-shadow: 5px 5px 25px 10px rgba(0, 0, 0, 0.653), -5px -5px 25px 10px rgba(0, 0, 0, 0.653)
 }
 
 .planet-title{
